@@ -1,3 +1,10 @@
+2008-04-17  Ben Van Mechelen  <me@benvm.be>
+
+	* garmon/widgets.py:
+	* plugins/live_data/live_data.glade:
+	* plugins/live_data/live_data.py:
+	    LiveData now uses the new MILWidget class 
+
 2008-04-16  Ben Van Mechelen  <me@benvm.be>
 
 	* garmon/widgets.py:
